--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Portafolio</title>
 </head>
+
 <body>
 
     <div class="container-header">
@@ -28,8 +30,102 @@
             <div class="nav-responsive">
                 <i class="fa-solid fa-bars"></i>
             </div>
-        
-        </header>
     </div>
+    <section id="inicio" class="inicio">
+        <div class="container-banner">
+            <div class="container-img">
+                <img src="img/cris.jpeg" alt="">
+            </div>
+            <h1>Cristian Canon Sindicue</h1>
+            <h2>ADSO - APRENDIS UI/UX</h2>
+            <div class="redes">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+        </div>
+    </section>
+    <div id="sobre mi" class="Sobremi">
+        <div class="container-section">
+            <h2>Sobre Mi</h2>
+            <p><span>Hola, Soy Cristian.</span>Soy desarrollador wed y experto en UI/UX, con una experiencia de mas de
+                10 año en el area</p>
+        </div>
+        <div class="fila">
+            <div class="col">
+                <h3>Datos Personales</h3>
+                <ul>
+                    <li>
+                        <strong>Cumpleaños</strong>
+                        16-06-2000
+                    </li>
+                    <li>
+                        <strong>Telefono</strong>
+                        +57 316 382 85 12
+                    </li>
+                    <li>
+                        <strong>Email</strong>
+                        cristancsindicue2000@gmail.com
+                    </li>
+                    <li>
+                        <strong>website</strong>
+                        www.cristiancanon.dev
+                    </li>
+                    <li>
+                        <strong>Direccion</strong>
+                        Garzon, Huila, Colombia
+                    </li>
+                    <li>
+                        <strong>Cargo</strong>
+                        <span>Freelance</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3>Intereses</h3>
+                <div class="container-intereses">
+                    <div class="intereses">
+                        <i class="fa-solid fa-gamepad"></i>
+                        <span>juegos</span>
+                    </div>
+                    <div class="intereses">
+                        <i class="fa-solid fa-headphones"></i>
+                        <span>Musica</span>
+                    </div>
+                    <div class="intereses">
+                        <i class="fa-solid fa-film"></i>
+                        <span>Peliculas</span>
+                    </div>
+                    <div class="intereses">
+                        <i class="fa-solid fa-book"></i>
+                        <span>Libros</span>
+                    </div>
+                    <div class="intereses">
+                        <i class="fa-solid fa-camera"></i>
+                        <span>Fotografias</span>
+                    </div>
+                    <div class="intereses">
+                        <i class="fa-solid fa-laptop"></i>
+                        <span>Tecnologia</span>
+                    </div>
+                    <div class="intereses">
+                        <i class="fa-solid fa-volleyball"></i>
+                        <span>Deporte</span>
+                    </div>
+                    <div class="intereses">
+                        <i class="fa-solid fa-plane"></i>
+                        <span>Viajar</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button>
+            Descargar CV <i class="fa-solid fa-downlad"></i>
+            <span class="overlay"></span>
+        </button>
+    </div>
+    </section>
+    </header>
 </body>
+
 </html>
