--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-
+    <!-- Menu Header -->
     <div class="container-header">
         <header>
             <div class="logo">
-                <a href="#">Sindicue</a>
+                <a href="#">@Sindicue</a>
             </div>
             <nav id="nav">
                 <ul>
@@ -31,6 +31,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
     </div>
+    <!-- Section Inicio-->
     <section id="inicio" class="inicio">
         <div class="container-banner">
             <div class="container-img">
@@ -45,13 +46,15 @@
             </div>
         </div>
     </section>
-    <div id="sobre mi" class="Sobremi">
+    <!-- Section Sobre Mi -->
+    <section id="sobremi" class="sobremi">
         <div class="container-section">
-            <h2>Sobre Mi</h2>
+            <h2>Sobre Mí</h2>
             <p><span>Hola, Soy Cristian.</span>Soy desarrollador wed y experto en UI/UX, con una experiencia de mas de
                 10 año en el area</p>
         </div>
         <div class="fila">
+            <!-- Datos Personales-->
             <div class="col">
                 <h3>Datos Personales</h3>
                 <ul>
@@ -81,38 +84,39 @@
                     </li>
                 </ul>
             </div>
+            <!--Intereses-->
             <div class="col">
                 <h3>Intereses</h3>
                 <div class="container-intereses">
-                    <div class="intereses">
+                    <div class="interes">
                         <i class="fa-solid fa-gamepad"></i>
                         <span>juegos</span>
                     </div>
-                    <div class="intereses">
+                    <div class="interes">
                         <i class="fa-solid fa-headphones"></i>
-                        <span>Musica</span>
+                        <span>Música</span>
                     </div>
-                    <div class="intereses">
+                    <div class="interes">
                         <i class="fa-solid fa-film"></i>
-                        <span>Peliculas</span>
+                        <span>Películas</span>
                     </div>
-                    <div class="intereses">
+                    <div class="interes">
                         <i class="fa-solid fa-book"></i>
                         <span>Libros</span>
                     </div>
-                    <div class="intereses">
+                    <div class="interes">
                         <i class="fa-solid fa-camera"></i>
                         <span>Fotografias</span>
                     </div>
-                    <div class="intereses">
+                    <div class="interes">
                         <i class="fa-solid fa-laptop"></i>
                         <span>Tecnologia</span>
                     </div>
-                    <div class="intereses">
+                    <div class="interes">
                         <i class="fa-solid fa-volleyball"></i>
                         <span>Deporte</span>
                     </div>
-                    <div class="intereses">
+                    <div class="interes">
                         <i class="fa-solid fa-plane"></i>
                         <span>Viajar</span>
                     </div>
@@ -123,7 +127,176 @@
             Descargar CV <i class="fa-solid fa-downlad"></i>
             <span class="overlay"></span>
         </button>
-    </div>
+        </div>
+    </section>
+    <!-- Section Skills -->
+    <section id="skills" class="skills">
+        <div class="container-section">
+            <h2>Skills</h2>
+            <div class="fila">
+                <!--Technical Skills-->
+                <div class="col">
+                    <h3>Technical Skills</h3>
+                    <div class="skill">
+                        <span>Javascript</span>
+                        <div class="barra-skill">
+                            <div class="progreso javascript">
+                                <span>75%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>HTML & CSS</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>89%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Photoshop</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>90%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Wordpress</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>80%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>React</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <h3>Professional Skills</h3>
+                    <div class="skill">
+                        <span>Comunicación</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>85%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Trabajo en Equipo</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>90%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Creatividad</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>99%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Dedicacion</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>80%</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <span>Proyect Management</span>
+                        <div class="barra-skill">
+                            <div class="progreso">
+                                <span>70%</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section id="curriculum" class="curriculum">
+        <div class="container-section">
+            <h2>Curriculum</h2>
+            <div class="fila">
+                <div class="col izquierda">
+                    <h3>Educación</h3>
+                    <div class="item izq">
+                        <h4>Arte y Multimedia</h4>
+                        <span class="casa">Universidad de Oxford</span>
+                        <span class="fecha">2010 - 2014</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                        <div class="conectori">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+                    <div class="item izq">
+                        <h4>Arte y Multimedia</h4>
+                        <span class="casa">Universidad de Oxford</span>
+                        <span class="fecha">2010 - 2014</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                        <div class="conectori">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+                    <div class="item izq">
+                        <h4>Arte y Multimedia</h4>
+                        <span class="casa">Universidad de Oxford></span>
+                        <span class="fecha">2010 - 2014</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                        <div class="conectori">
+                            <div class="circuloi"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col derecha">
+                    <h3>Experiencia de trabajo</h3>
+                    <div class="item der">
+                        <h4>Frontend Developer</h4>
+                        <span class="casa">Nombre compañia</span>
+                        <span class="fecha">2010 - 2014</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                    <div class="item der">
+                        <h4>Frontend Developer</h4>
+                        <span class="casa">Nombre compañia</span>
+                        <span class="fecha">2010 - 2014</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                    <div class="item der">
+                        <h4>Frontend Developer</h4>
+                        <span class="casa">Nombre compañia</span>
+                        <span class="fecha">2010 - 2014</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section Portfolio -->
+    <section id="portfolio" class="portfolio">
+        <div class="container-section">
+            
+        </div>
     </section>
     </header>
 </body>
