--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
             <div class="logo">
                 <a href="#">@Sindicue</a>
             </div>
-            <nav id="nav">
+            <nav id="nav" class="responsive">
                 <ul>
-                    <li><a href="#Inicio">Inicio</a></li>
-                    <li><a href="#Sobre Mi">Sobre Mi</a></li>
-                    <li><a href="#Skills">Skills</a></li>
-                    <li><a href="#Curriculum">Curriculum</a></li>
-                    <li><a href="Portafolio">Portafolio</a></li>
-                    <li><a href="#Contacto">Contacto</a></li>
+                    <li><a href="#inicio" onclick="seleccionar()">Inicio</a></li>
+                    <li><a href="#sobremi" onclick="seleccionar()">Sobre Mi</a></li>
+                    <li><a href="#Skills" onclick="seleccionar()">Skills</a></li>
+                    <li><a href="#Curriculum" onclick="seleccionar()">Curriculum</a></li>
+                    <li><a href="#Portafolio" onclick="seleccionar()">Portafolio</a></li>
+                    <li><a href="#Contacto" onclick="seleccionar()">Contacto</a></li>
                 </ul>
             </nav>
-            <div class="nav-responsive">
+            <div class="nav-responsive" onclick="mostrarOcultarMenu()">
                 <i class="fa-solid fa-bars"></i>
             </div>
+        </header>
     </div>
     <!-- Section Inicio-->
     <section id="inicio" class="inicio">
@@ -178,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!--Professional Skills-->
                 <div class="col">
                     <h3>Professional Skills</h3>
                     <div class="skill">
@@ -217,7 +218,7 @@
                         <span>Proyect Management</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>70%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -258,7 +259,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
@@ -295,9 +295,104 @@
     <!-- Section Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="container-section">
-            
+            <h2>Portfolio</h2>
+            <div class="galeria">
+                <div class="proyecto">
+                    <img src="img/imagen2.jpeg" alt="">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografia</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/imagen 3.webp" alt="">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografia</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/imagen4.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografia</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/imagen5.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografia</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/imagen6.jpeg" alt="">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografia</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/imagen7.png" alt="">
+                    <div class="overlay">
+                        <h3>Diseño Creativo</h3>
+                        <p>Fotografia</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <!-- Section Contacto -->
+    <section id="contacto" class="contacto">
+        <div class="container-section">
+            <h2>Contacto</h2>
+            <div class="fila">
+                <!-- Formulario -->
+                <div class="col">
+                    <input type="text" placeholder="Tu Nombre">
+                    <input type="email" placeholder="Numero Telefonico">
+                    <input type="text" placeholder="Direccion de Correo">
+                    <input type="text" placeholder="Tema">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Tu Mensaje"></textarea>
+                    <button>Enviar <i class="fa-solid fa-paper-plane"></i>
+                        <span class="overlay"></span>
+                    </button>
+                </div>
+                <!-- Mapa -->
+                <div class="col">
+                    <img src="img/mapa.jpg" alt="">
+                    <div class="info">
+                        <ul>
+                            <li>
+                                <i class="fa-solid fa-location-dot"></i>
+                                Garzon, Huila, Colombia
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-mobile-screen"></i>
+                                Lamame: +57 310 000 0000
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-envelope"></i>
+                                E-mail: cristancsindicue2000@gmail.com
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer>
+        <a href="#inicio" class="arriba">
+            <i class="fa-solid fa-angles-up"></i>
+        </a>
+        <div class="redes">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </footer>
+    <script src="js/script.js"></script>
     </header>
 </body>
 
