--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Proyect Management</span>
+                        <span>Proyect-Management</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>80%</span>
